feat: added images

--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>minecraft</title>
-    <link rel="stylesheet" href="./normalize.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style/normalize.css">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
     <header class="header">
-        <div class="header__content">
-                <div class="container">
+        <div class="container">
+            <div class="header__content">
                 <a href="" class="logotype">
-                    <img src="" alt="" class="logotype__image">
+                    <img src="./img/logo.png" alt="minecraft logo" class="logotype__image">
                 </a>
                 <div class="header__button-wrapper">
                     <a href="" class="link-other-page">
-                        <img src="" alt="" class="link-other-page__image">
+                        <img src="./img/block.png" alt="grass block" class="link-other-page__image">
                         <span class="link-other-page__text">about</span>
                     </a>
                     <a href="" class="link-other-page">
-                        <img src="" alt="" class="link-other-page__image">
+                        <img src="./img/chest.png" alt="chest" class="link-other-page__image">
                         <span class="link-other-page__text">resources</span>
                     </a>
                 </div>
