--- a/index.html
+++ b/index.html
@@ -14,23 +14,31 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
             <div class="header__content">
-                <a href="" class="logotype">
-                    <img src="./img/logo.png" alt="minecraft logo" class="logotype__image">
-                </a>
-                <div class="header__button-wrapper">
-                    <a href="" class="link-other-page">
-                        <img src="./img/block.png" alt="grass block" class="link-other-page__image">
-                        <span class="link-other-page__text">about</span>
-                    </a>
-                    <a href="" class="link-other-page">
-                        <img src="./img/chest.png" alt="chest" class="link-other-page__image">
-                        <span class="link-other-page__text">resources</span>
-                    </a>
+                <div class="header__auth">
+                    <div class="container">
+                        <a href="#!" class="auth-link">Login</a>
+                        <a href="#!" class="auth-link">Activate code</a>
+                    </div>
+                </div>
+                <div class ="header__navigation">
+                    <div class="container">
+                        <a href="" class="logotype">
+                            <img src="./img/logo.png" alt="minecraft logo" class="logotype__image">
+                        </a>
+                        <div class="header__button-wrapper">
+                            <a href="" class="link-other-page">
+                                <img src="./img/block.png" alt="grass block" class="link-other-page__image">
+                                <span class="link-other-page__text">about</span>
+                            </a>
+                            <a href="" class="link-other-page">
+                                <img src="./img/chest.png" alt="chest" class="link-other-page__image">
+                                <span class="link-other-page__text">resources</span>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
     </header>
 </body>
 </html>
