--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&family=Pixelify+Sans:wght@400..700&family=Tektur:wght@400..900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="./img/block.png" type="image/x-icon">
 
 </head>
@@ -27,11 +27,11 @@
                             <img src="./img/logo.png" alt="minecraft logo" class="logotype__image">
                         </a>
                         <div class="header__button-wrapper">
-                            <a href="" class="link-other-page">
+                            <a href="#!" class="link-other-page">
                                 <img src="./img/block.png" alt="grass block" class="link-other-page__image">
                                 <span class="link-other-page__text">about</span>
                             </a>
-                            <a href="" class="link-other-page">
+                            <a href="#!" class="link-other-page">
                                 <img src="./img/chest.png" alt="chest" class="link-other-page__image">
                                 <span class="link-other-page__text">resources</span>
                             </a>
