feat: added main

--- a/index.html
+++ b/index.html
@@ -40,5 +40,21 @@
                 </div>
             </div>
     </header>
+    <main class="main">
+        <section class="hero">
+            <div class="container">
+                <div class="hero__content">
+                    <div class="hero__text">
+                        <h1 class="hero__title">
+                            Minecraft
+                        </h1>
+                        <p class="hero__description">
+                            is a game of blocks, creatures and community. You can survive the night or create a work of art - the choice is yours. But if the thought of exploring a vast new world on your own seems overwhelming, then fear not! Let's find out what Minecraft is all about!
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
