feat:added hero style for dekstop

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             Minecraft
                         </h1>
                         <p class="hero__description">
-                            is a game of blocks, creatures and community. You can survive the night or create a work of art - the choice is yours. But if the thought of exploring a vast new world on your own seems overwhelming, then fear not! Let's find out what Minecraft is all about!
+                            - is a game of blocks, creatures and community. You can survive the night or create a work of art - the choice is yours. But if the thought of exploring a vast new world on your own seems overwhelming, then fear not! Let's find out what Minecraft is all about!
                         </p>
                     </div>
                 </div>
