feat:added footer

--- a/index.html
+++ b/index.html
@@ -56,5 +56,34 @@
             </div>
         </section>
     </main>
+
+    <footer class ="footer">
+        <div class="container">
+            <div class="footer__content">
+                <a href="" class="logotype">
+                    <img src="./img/logo.png" alt="minecraft logo" class="logotype__image">
+                </a>
+                <ul class="messengers">
+                    <li class="messengers__item">
+                        <a href="" class="link-messenger">
+                            <img src="./img/kk.png" alt="" class="link-messenger__image">
+                        </a> 
+                    </li>
+                    <li class="messengers__item">
+                        <a href="" class="link-messenger">
+                            <img src="./img/lol.png" alt="" class="link-messenger__image">
+                        </a> 
+                        
+                    </li> 
+                    <li class="messengers__item">
+                        <a href="" class="link-messenger">
+                            <img src="./img/kikipedia.png" alt="" class="link-messenger__image">
+                        </a>
+
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
