feat:added footer styles

--- a/index.html
+++ b/index.html
@@ -66,18 +66,24 @@
                 <ul class="messengers">
                     <li class="messengers__item">
                         <a href="" class="link-messenger">
-                            <img src="./img/kk.png" alt="" class="link-messenger__image">
+                            <svg class="social-icon" viewBox="0 0 48 48">
+                                <use href="./img/sprite.svg#social-vk" x="0" y="0"></use>
+                            </svg>
                         </a> 
                     </li>
                     <li class="messengers__item">
                         <a href="" class="link-messenger">
-                            <img src="./img/lol.png" alt="" class="link-messenger__image">
+                            <svg class="social-icon" viewBox="0 0 48 48">
+                                <use href="./img/sprite.svg#social-telegram" x="0" y="0"></use>
+                            </svg>
                         </a> 
                         
                     </li> 
                     <li class="messengers__item">
                         <a href="" class="link-messenger">
-                            <img src="./img/kikipedia.png" alt="" class="link-messenger__image">
+                            <svg class="social-icon" viewBox="0 0 48 48">
+                                <use href="./img/sprite.svg#social-facebook" x="0" y="0"></use>
+                            </svg>
                         </a>
 
                     </li>
