feat:added base html structure for about game

--- a/public/aboutgame.html
+++ b/public/aboutgame.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>minecraft</title>
-    <link rel="stylesheet" href="./style/normalize.css">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="../style/normalize.css">
+    <link rel="stylesheet" href="../style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&family=Pixelify+Sans:wght@400..700&family=Tektur:wght@400..900&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="./img/block.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/block.png" type="image/x-icon">
 
 </head>
 <body>
@@ -23,16 +23,16 @@
                 </div>
                 <div class ="header__navigation">
                     <div class="container">
-                        <a href="" class="logotype">
-                            <img src="./img/logo.png" alt="minecraft logo" class="logotype__image">
+                        <a href="../index.html" class="logotype">
+                            <img src="../img/logo.png" alt="minecraft logo" class="logotype__image">
                         </a>
                         <div class="header__button-wrapper">
-                            <a href="./public/aboutgame.html" class="link-other-page">
-                                <img src="./img/block.png" alt="grass block" class="link-other-page__image">
+                            <a href="" class="link-other-page">
+                                <img src="../img/block.png" alt="grass block" class="link-other-page__image">
                                 <span class="link-other-page__text">about</span>
                             </a>
                             <a href="" class="link-other-page">
-                                <img src="./img/chest.png" alt="chest" class="link-other-page__image">
+                                <img src="../img/chest.png" alt="chest" class="link-other-page__image">
                                 <span class="link-other-page__text">resources</span>
                             </a>
                         </div>
@@ -41,17 +41,10 @@
             </div>
     </header>
     <main class="main">
-        <section class="hero">
+        <section class="about-game">
             <div class="container">
-                <div class="hero__content">
-                    <div class="hero__text">
-                        <h1 class="hero__title">
-                            Minecraft
-                        </h1>
-                        <p class="hero__description">
-                            - is a game of blocks, creatures and community. You can survive the night or create a work of art - the choice is yours. But if the thought of exploring a vast new world on your own seems overwhelming, then fear not! Let's find out what Minecraft is all about!
-                        </p>
-                    </div>
+                <div class="about-game__content">
+                    
                 </div>
             </div>
         </section>
@@ -60,21 +53,21 @@
     <footer class ="footer">
         <div class="container">
             <div class="footer__content">
-                <a href="" class="logotype">
-                    <img src="./img/logo.png" alt="minecraft logo" class="logotype__image">
+                <a href="../index.html" class="logotype">
+                    <img src="../img/logo.png" alt="minecraft logo" class="logotype__image">
                 </a>
                 <ul class="messengers">
                     <li class="messengers__item">
                         <a href="" class="link-messenger">
                             <svg class="social-icon" viewBox="0 0 48 48">
-                                <use href="./img/sprite.svg#social-vk" x="0" y="0"></use>
+                                <use href="../img/sprite.svg#social-vk" x="0" y="0"></use>
                             </svg>
                         </a> 
                     </li>
                     <li class="messengers__item">
                         <a href="" class="link-messenger">
                             <svg class="social-icon" viewBox="0 0 48 48">
-                                <use href="./img/sprite.svg#social-telegram" x="0" y="0"></use>
+                                <use href="../img/sprite.svg#social-telegram" x="0" y="0"></use>
                             </svg>
                         </a> 
                         
@@ -82,7 +75,7 @@
                     <li class="messengers__item">
                         <a href="" class="link-messenger">
                             <svg class="social-icon" viewBox="0 0 48 48">
-                                <use href="./img/sprite.svg#social-facebook" x="0" y="0"></use>
+                                <use href="../img/sprite.svg#social-facebook" x="0" y="0"></use>
                             </svg>
                         </a>
 
