feat added slider "

--- a/public/aboutgame.html
+++ b/public/aboutgame.html
@@ -10,7 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&family=Pixelify+Sans:wght@400..700&family=Tektur:wght@400..900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="../img/block.png" type="image/x-icon">
-
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous" defer="defer"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js" defer="defer"></script>
+    <script src="../js/slider.js" defer="defer"></script>
 </head>
 <body>
     <header class="header">
@@ -44,7 +46,11 @@
         <section class="about-game">
             <div class="container">
                 <div class="about-game__content">
-                    
+                    <div class="slider" id="slider">
+                        <div>your content</div>
+                        <div>your content</div>
+                        <div>your content</div>
+                    </div>
                 </div>
             </div>
         </section>
