feat:added styles for slider and arrows

--- a/public/aboutgame.html
+++ b/public/aboutgame.html
@@ -47,9 +47,9 @@
             <div class="container">
                 <div class="about-game__content">
                     <div class="slider" id="slider">
-                        <div>your content</div>
-                        <div>your content</div>
-                        <div>your content</div>
+                        <div>your content1</div>
+                        <div>your content2</div>
+                        <div>your content3</div>
                     </div>
                 </div>
             </div>
