--- a/public/aboutgame.html
+++ b/public/aboutgame.html
@@ -47,9 +47,11 @@
             <div class="container">
                 <div class="about-game__content">
                     <div class="slider" id="slider">
-                        <div>your content1</div>
-                        <div>your content2</div>
-                        <div>your content3</div>
+                        <div class="slick-slide__first">your content1</div>
+                        <div class="slick-slide__second">your content2</div>
+                        <div class="slick-slide__third">your content3</div>
+                        <div class="slick-slide__fourth">your content4</div>
+                        <div class="slick-slide__fifth">your content5</div>
                     </div>
                 </div>
             </div>
