feat:added dekstop slider

--- a/public/aboutgame.html
+++ b/public/aboutgame.html
@@ -47,11 +47,11 @@
             <div class="container">
                 <div class="about-game__content">
                     <div class="slider" id="slider">
-                        <div class="slick-slide__first">your content1</div>
-                        <div class="slick-slide__second">your content2</div>
-                        <div class="slick-slide__third">your content3</div>
-                        <div class="slick-slide__fourth">your content4</div>
-                        <div class="slick-slide__fifth">your content5</div>
+                        <div class="slick-slide__first"><p class="slider__text">this is a type of food you can eat it to restore helath and hunger</p></div>
+                        <div class="slick-slide__second"><p class="slider__text">this is a house you can build it to have shelter from mobs and sleep trought the night</p></div>
+                        <div class="slick-slide__third"><p class="slider__text">this is a zombie it's a hostile night mob so you better build a house to survive him</p></div>
+                        <div class="slick-slide__fourth"><p class="slider__text">this is a creeper it will explode from nowhere and destroy your creations it's the most annoying mob in the game</p></div>
+                        <div class="slick-slide__fifth"><p class="slider__text">this is a cave you can explore it to find gems and precious things</p></div>
                     </div>
                 </div>
             </div>
