feat:added html structure for resources section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>minecraft</title>
+    <title>Minecraft | Main page</title>
     <link rel="stylesheet" href="./style/normalize.css">
     <link rel="stylesheet" href="./style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +23,7 @@
                 </div>
                 <div class ="header__navigation">
                     <div class="container">
-                        <a href="" class="logotype">
+                        <a href="#!" class="logotype">
                             <img src="./img/logo.png" alt="minecraft logo" class="logotype__image">
                         </a>
                         <div class="header__button-wrapper">
@@ -31,7 +31,7 @@
                                 <img src="./img/block.png" alt="grass block" class="link-other-page__image">
                                 <span class="link-other-page__text">about</span>
                             </a>
-                            <a href="" class="link-other-page">
+                            <a href="./public/resources.html" class="link-other-page">
                                 <img src="./img/chest.png" alt="chest" class="link-other-page__image">
                                 <span class="link-other-page__text">resources</span>
                             </a>
@@ -60,7 +60,7 @@
     <footer class ="footer">
         <div class="container">
             <div class="footer__content">
-                <a href="" class="logotype">
+                <a href="#!" class="logotype">
                     <img src="./img/logo.png" alt="minecraft logo" class="logotype__image">
                 </a>
                 <ul class="messengers">
