--- a/public/resources.html
+++ b/public/resources.html
@@ -3,16 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minecraft | About game</title>
+    <title>Minecraft | Resources</title>
     <link rel="stylesheet" href="../style/normalize.css">
     <link rel="stylesheet" href="../style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&family=Pixelify+Sans:wght@400..700&family=Tektur:wght@400..900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="../img/block.png" type="image/x-icon">
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous" defer="defer"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js" defer="defer"></script>
-    <script src="../js/slider.js" defer="defer"></script>
 </head>
 <body>
     <header class="header">
@@ -29,11 +26,11 @@
                             <img src="../img/logo.png" alt="minecraft logo" class="logotype__image">
                         </a>
                         <div class="header__button-wrapper">
-                            <a href="!#" class="link-other-page">
+                            <a href="./aboutgame.html" class="link-other-page">
                                 <img src="../img/block.png" alt="grass block" class="link-other-page__image">
                                 <span class="link-other-page__text">about</span>
                             </a>
-                            <a href="./resources.html" class="link-other-page">
+                            <a href="#!" class="link-other-page">
                                 <img src="../img/chest.png" alt="chest" class="link-other-page__image">
                                 <span class="link-other-page__text">resources</span>
                             </a>
@@ -43,21 +40,51 @@
             </div>
     </header>
     <main class="main">
-        <section class="about-game">
+        <section class="resources">
             <div class="container">
-                <div class="about-game__content">
-                    <div class="slider" id="slider">
-                        <div class="slick-slide__first"><p class="slider__text">this is a type of food you can eat it to restore helath and hunger</p></div>
-                        <div class="slick-slide__second"><p class="slider__text">this is a house you can build it to have shelter from mobs and sleep trought the night</p></div>
-                        <div class="slick-slide__third"><p class="slider__text">this is a zombie it's a hostile night mob so you better build a house to survive him</p></div>
-                        <div class="slick-slide__fourth"><p class="slider__text">this is a creeper it will explode from nowhere and destroy your creations it's the most annoying mob in the game</p></div>
-                        <div class="slick-slide__fifth"><p class="slider__text">this is a cave you can explore it to find gems and precious things</p></div>
-                    </div>
+                <div class="resources__content">
+                    <ul class="list-cards">
+                        <li class="list-cards__item">
+                            <article class="card-mod">
+                                <div class="card-mod__wrapper-img"><img src="../img/wangel.png" alt="weeping angels" class="card-mods__img"></div>
+                                <a href="https://minecraft-inside.ru/mods/184964-loqors-weeping-angels.html" class="card-mod__link" target="_blank">see more...</a>
+                            </article>
+                        </li>
+                        <li class="list-cards__item">
+                            <article class="card-mod">
+                                <div class="card-mod__wrapper-img"><img src="../img/tatatattatata-sahur(incubator).jpg" alt="incubator" class="card-mods__img"></div>
+                                <a href="https://minecraft-inside.ru/mods/184965-simple-incubator.html" class="card-mod__link" target="_blank">see more...</a>
+                            </article>
+                        </li>
+                        <li class="list-cards__item">
+                            <article class="card-mod">
+                                <div class="card-mod__wrapper-img"><img src="../img/moko.png" alt="movie content" class="card-mods__img"></div>
+                                <a href="https://minecraft-inside.ru/mods/184802-moviecontet.html" class="card-mod__link" target="_blank">see more...</a>
+                            </article>
+                        </li>
+                        <li class="list-cards__item">
+                            <article class="card-mod">
+                                <div class="card-mod__wrapper-img"><img src="../img/sc_img.png" alt="enchant once" class="card-mods__img"></div>
+                                <a href="" class="card-mod__link">see more...</a>
+                            </article>
+                        </li>
+                        <li class="list-cards__item">
+                            <article class="card-mod">
+                                <div class="card-mod__wrapper-img"><img src="../img/nnnnnnnnnnn.png" alt="" class="card-mods__img"></div>
+                                <a href="https://minecraft-inside.ru/mods/151080-enderscape.html" class="card-mod__link" target="_blank">see more...</a>
+                            </article>
+                        </li>
+                        <li class="list-cards__item">
+                            <article class="card-mod">
+                                <div class="card-mod__wrapper-img"><img src="../img/creacict.png" alt="" class="card-mods__img"></div>
+                                <a href="https://minecraft-inside.ru/mods/149043-creraces.html" class="card-mod__link" target="_blank">see more...</a>
+                            </article>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </section>
     </main>
-
     <footer class ="footer">
         <div class="container">
             <div class="footer__content">
