feat added function;

--- a/public/resources.html
+++ b/public/resources.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&family=Pixelify+Sans:wght@400..700&family=Tektur:wght@400..900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="../img/block.png" type="image/x-icon">
+    <script src="../js/screamer.js" defer="defer"></script>
 </head>
 <body>
     <header class="header">
@@ -65,7 +66,7 @@
                         <li class="list-cards__item">
                             <article class="card-mod">
                                 <div class="card-mod__wrapper-img"><img src="../img/sc_img.png" alt="enchant once" class="card-mods__img"></div>
-                                <a href="" class="card-mod__link">see more...</a>
+                                <button id="btnScreamer" class="card-mod__link">see more...</button>
                             </article>
                         </li>
                         <li class="list-cards__item">
