fix: fixed about game link glitch

--- a/public/aboutgame.html
+++ b/public/aboutgame.html
@@ -29,7 +29,7 @@
                             <img src="../img/logo.png" alt="minecraft logo" class="logotype__image">
                         </a>
                         <div class="header__button-wrapper">
-                            <a href="!#" class="link-other-page">
+                            <a href="#!" class="link-other-page">
                                 <img src="../img/block.png" alt="grass block" class="link-other-page__image">
                                 <span class="link-other-page__text">about</span>
                             </a>
